--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios-mock-adapter": "^1.16.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
+    "jest-dom": "^3.1.3",
     "react-test-renderer": "^16.8.6",
     "sinon": "^5.1.1"
   }
