--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "react-dev-utils": "^7.0.5",
     "react-dom": "^16.8.6",
     "react-fontawesome": "^1.6.1",
+    "react-redux": "^7.1.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-slick": "^0.23.2",
     "react-tabs": "^2.3.0",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
     "slick-carousel": "^1.8.1",
     "webpack-dev-server": "^3.3.1"
   },
